fix editor object slot content overflow issue

--- a/packages/heroes-homm1-react/src/editor/EditorObjectSlot/EditorObjectSlot.module.scss
+++ b/packages/heroes-homm1-react/src/editor/EditorObjectSlot/EditorObjectSlot.module.scss
@@ -14,16 +14,27 @@
   }
 }
 
-.object {
+.object-container {
   position: absolute;
+  overflow: hidden;
 
   .large & {
     bottom: 8px;
     left: 3px;
+    width: 86px - 2 * 3;
+    height: 70px - 3 - 8;
   }
 
   .small & {
     bottom: 3px;
     left: 2px;
+    width: 69px - 2 - 3;
+    height: 53px - 2 - 3;
   }
+}
+
+.object {
+  position: absolute;
+  bottom: 0;
+  left: 0;
 }
